@@ -1,6 +1,7 @@
 1.3
   - Better support for reading passworded pdf files
-  - Add unit tests for reading passworded and encrypted pdf files
+  - Support direct conversion from pdf to png, jpeg, tiff
+  - Add unit tests for rendering and passworded / encrypted pdf files
   - Switch to Rcpp automatic symbol registration
 
 1.2
